[tool.poetry]
name = "vercel-test"
version = "0.1.0"
description = ""
authors = ["AndrewRodriguesDev <andrew.rodrigues.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
